--- a/triangle.css
+++ b/triangle.css
@@ -1,3 +1,9 @@
+* {
+  box-sizing: border-box;
+}
+ 
+body{background-image: url(background.jpg);}
+
 h1{text-align: center;
    font-size: 35px;
    font-style: italic;
