--- a/triangle.css
+++ b/triangle.css
@@ -9,3 +9,35 @@ h1{text-align: center;
    font-style: italic;
    font-weight: bold;   
 }
+
+
+p{font-size: 20px;
+  text-align: center;
+  font-style: oblique;
+  font-weight: bold;
+  font-family: sans-serif;
+}
+
+.flex_container{display: flex;
+                flex-direction: row;                
+}
+
+.flexbox1{width: 50%;
+          background-color: red;
+          border: 5px solid black;
+          margin-right: 10px; 
+}
+
+.flexbox1 img{margin-left: 150px;
+              width: 30%;
+              margin-top: 50px;  
+}
+
+.flexbox2{width: 50%;
+          background-color: blue;
+          border: 5px solid black;
+}
+
+.flexbox2 img{margin-left: 150px;
+              width: 30%;  
+}
