--- a/triangle.css
+++ b/triangle.css
@@ -81,3 +81,9 @@ p{font-size: 20px;
                       margin-left: 105px;
                       margin-top: 20px; 
 }
+.main_footer{
+  background-color: orange;
+  padding: 30px;
+}
+
+.main_footer h1{text-align: center;}
