--- a/css/triangle.css
+++ b/css/triangle.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
 }
  
-body{background-image: url(background.jpg);}
+body{background-image: url("../images/background.jpg");}
 
 h1{text-align: center;
    font-size: 35px;
